<resources>
    <string name="app_name">Παιχνιδούλης</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="maths">Μαθηματικά</string>
    <string name="languageCategory">Γλώσσα</string>
    <string name="colors">Χρώματα</string>
    <string name="alphabete">Aλφαβήτα</string>
    <string name="start">Έναρξη</string>
    <string name="settings">Ρυθμίσεις</string>
    <string name="playlearn">Ας μάθουμε παίζοντας</string>
    <string name="sound">Ήχος</string>
    <string name="selectCategory">Διάλεξε μία κατηγορία</string>
    <string name="mikrapaidia">για ποιό μικρά παιδιά..</string>

    <string name="white">Άσπρο</string>
    <string name="blue">Μπλέ</string>
    <string name="black">Μαύρο</string>
    <string name="red">Κόκκινο</string>
    <string name="green">Πράσινο</string>
    <string name="yellow">Κίτρινο</string>
    <string name="brown">Καφέ</string>
    <string name="grey">Γκρί</string>
    <string name="orange">Πορτοκαλί</string>
    <string name="paint">Ζωγραφική</string>
    <string name="tittledialogcry">Λυπάμαι χάσατε..</string>
    <string name="tittledialog3">Τέλος</string>
    <string name="letsplayagain">Άς ξανά παίξουμε</string>
    <string name="pickacolor">Διάλεξε ένα χρώμα</string>
    <string name="color">Χρώμα</string>
    <string name="clear">Σβήσιμο</string>
    <string name="selectColor">Για να αλλάξετε χρώμα πατήστε ρυθμίσεις</string>
    <string name="polminima">Για να ξεκινήσετε το παιχνίδι παρακαλώ συμπληρώστε το ερωτηματολόγιο
    πιέστε ΣΥΝΕΧΕΙΑ ή Take the survey</string>

    <string name="shapes">Σχήματα</string>
    <string name="animals">Ζώα</string>


</resources>
